bllog css update and layout bug fix

--- a/assets/css/berg.css
+++ b/assets/css/berg.css
@@ -2771,6 +2771,8 @@ button.mfp-arrow:active {
 #blog .blog-post > .post-media img {
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
+  height:200px;
+  width:100%;
 }
 
 #blog .blog-post > .post-meta {
